--- a/index.html
+++ b/index.html
@@ -269,10 +269,10 @@
           </div>
         </div>
         <div class="column">
-          <div class="text-box"><strong>Oracle:</strong> 这是情景3的Oracle文本</div>
-          <div class="text-box"><strong>ASR:</strong> 这是情景3的ASR文本</div>
-          <div class="text-box"><strong>Ground Truth:</strong> 这是情景3的意图Ground Truth</div>
-          <div class="text-box"><strong>Prediction:</strong> 这是情景3的意图结果</div>
+          <div class="text-box"><strong>Oracle:</strong> whats the currency exchange rate for china</div>
+          <div class="text-box"><strong>ASR:</strong> whats the currency exchange rate for china</div>
+          <div class="text-box"><strong>Ground Truth:</strong> 意图: qa_currency, 实体: [place_name=china]</div>
+          <div class="text-box"><strong>Prediction:</strong> 意图: general_quirky, 实体: [ ]</div>
         </div>
       </div>
     </div>
