--- a/index.html
+++ b/index.html
@@ -244,8 +244,71 @@
 
     <!-- 情景3 ------------------------------------------------------------------------------------------>
     <h2 class="subtitle">插入无关语音 & 环境噪声 & 其他人声</h2>
-
     <!-- 样本1 -->
+    <div class="sample-box scenario2_3">
+      <div class="columns is-vcentered">
+        <div class="column is-one-third">
+          <div class="audio-block">
+            <span class="audio-label">源语音</span>
+            <audio controls>
+              <source src="./static/audio/src_clean/audio--1501778636.wav" type="audio/wav">
+            </audio>
+          </div>
+          <div class="audio-block">
+            <span class="audio-label">插入后语音</span>
+            <audio controls>
+              <source src="./static/audio/wuguan_env+voice_enhanced/audio--1501778636_wuguanyuyin03-TTS1501778636_n2.wav" type="audio/wav">
+            </audio>
+          </div>
+          <div class="audio-block">
+            <span class="audio-label">增强后语音</span>
+            <audio controls>
+              <source src="./static/audio/wuguan_env+voice_enhanced/audio--1501778636_wuguanyuyin03-TTS1501778636_n2_enh.wav" type="audio/wav">
+            </audio>
+          </div>
+        </div>
+        <div class="column">
+          <div class="text-box"><strong>Oracle:</strong> whats the currency exchange rate for china</div>
+          <div class="text-box"><strong>ASR:</strong> whats the currency exchange rate for china</div>
+          <div class="text-box"><strong>Ground Truth:</strong> 意图: qa_currency, 实体: [place_name=china]</div>
+          <div class="text-box"><strong>Prediction:</strong> 意图: general_quirky, 实体: [ ]</div>
+        </div>
+      </div>
+    </div>
+
+    <!-- 样本2 -->
+    <div class="sample-box scenario2_3">
+      <div class="columns is-vcentered">
+        <div class="column is-one-third">
+          <div class="audio-block">
+            <span class="audio-label">源语音</span>
+            <audio controls>
+              <source src="./static/audio/src_clean/audio--1504190218.wav" type="audio/wav">
+            </audio>
+          </div>
+          <div class="audio-block">
+            <span class="audio-label">插入后语音</span>
+            <audio controls>
+              <source src="./static/audio/wuguan_env+voice_enhanced/audio--1504190218_wuguanyuyin01-TTS1504190218_n5.wav" type="audio/wav">
+            </audio>
+          </div>
+          <div class="audio-block">
+            <span class="audio-label">增强后语音</span>
+            <audio controls>
+              <source src="./static/audio/wuguan_env+voice_enhanced/audio--1504190218_wuguanyuyin01-TTS1504190218_n5_enh.wav" type="audio/wav">
+            </audio>
+          </div>
+        </div>
+        <div class="column">
+          <div class="text-box"><strong>Oracle:</strong> whats the currency exchange rate for china</div>
+          <div class="text-box"><strong>ASR:</strong> whats the currency exchange rate for china</div>
+          <div class="text-box"><strong>Ground Truth:</strong> 意图: qa_currency, 实体: [place_name=china]</div>
+          <div class="text-box"><strong>Prediction:</strong> 意图: general_quirky, 实体: [ ]</div>
+        </div>
+      </div>
+    </div>
+
+    <!-- 样本3 -->
     <div class="sample-box scenario2_3">
       <div class="columns is-vcentered">
         <div class="column is-one-third">
