--- a/index.html
+++ b/index.html
@@ -272,6 +272,8 @@
           <div class="text-box"><strong>ASR:</strong> resume the song from the audiobook by the beatles</div>
           <div class="text-box"><strong>Ground Truth:</strong> 意图: play_audiobook, 实体: [player_setting_resume, media_type=audiobook, artist_name=beatles]</div>
           <div class="text-box"><strong>Prediction:</strong> 意图: play_audiobook, 实体: [player_setting_resume, media_type=audiobook]</div>
+        </div>
+      </div>
     </div>
 
     <!-- 样本2 -->
