--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>DOSE+ Samples</title>
+  <title>Noisy SLU Samples</title>
   <link rel="stylesheet" href="./static/css/bulma.min.css">
   <link rel="stylesheet" href="./static/css/index.css">
+  <link rel="icon" href="./static/icon/uestc.png">
   <style>
     /* ----------------- 公共样式 ----------------- */
     .sample-box {
