--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           <div class="text-box"><strong>Oracle:</strong> remind me tonight to pick up my dry cleaning at eight pm</div>
           <div class="text-box"><strong>ASR:</strong> remind me tonight to pick up a do you need some water a cleaning at eight pm</div>
           <div class="text-box"><strong>Ground Truth:</strong> 意图: calendar_set, 实体: [event_name=pick up my dry cleaning, time=eight pm]</div>
-          <div class="text-box"><strong>Prediction:</strong> 意图: calendar_set, 实体: event_name=pick up, timeofday=tonight]</div>
+          <div class="text-box"><strong>Prediction:</strong> 意图: calendar_set, 实体: [event_name=pick up, timeofday=tonight]</div>
         </div>
       </div>
     </div>
@@ -208,7 +208,6 @@
 
     <!-- 情景2 ------------------------------------------------------------------------------------------>
     <h2 class="subtitle">插入无关语音 & 环境噪声</h2>
-
     <!-- 样本1 -->
     <div class="sample-box scenario2_3">
       <div class="columns is-vcentered">
@@ -217,27 +216,95 @@
           <div class="audio-block">
             <span class="audio-label">源语音</span>
             <audio controls>
-              <source src="./static/audio/scenario2_sample1_scr.wav" type="audio/wav">
+              <source src="./static/audio/src_clean/audio--1505407237.wav" type="audio/wav">
             </audio>
           </div>
           <div class="audio-block">
             <span class="audio-label">插入后语音</span>
             <audio controls>
-              <source src="./static/audio/scenario2_sample1_inserted.wav" type="audio/wav">
+              <source src="./static/audio/wuguan_env/audio--1505407237_wuguanyuyin01-TTS1505407237_n2.wav" type="audio/wav">
             </audio>
           </div>
           <div class="audio-block">
             <span class="audio-label">增强后语音</span>
             <audio controls>
-              <source src="./static/audio/scenario2_sample1_enh.wav" type="audio/wav">
+              <source src="./static/audio/wuguan_env_enhanced/audio--1505407237_wuguanyuyin01-TTS1505407237_n2_enh.wav" type="audio/wav">
             </audio>
           </div>
         </div>
         <!-- 右列：oracle、ASR、意图GT、意图结果 -->
         <div class="column">
-          <div class="text-box"><strong>Oracle:</strong> play a game of contra as a second player</div>
-          <div class="text-box"><strong>ASR:</strong> i will do my homework as soon as possible play a game of contra as a second player</div>
-          <div class="text-box"><strong>Ground Truth:</strong> 意图: play_game, 实体: [game_name=contra]</div>
+          <div class="text-box"><strong>Oracle:</strong> resume the song from the audiobook by the beatles</div>
+          <div class="text-box"><strong>ASR:</strong> resume the song from the audiobook by the beatles</div>
+          <div class="text-box"><strong>Ground Truth:</strong> 意图: play_audiobook, 实体: [player_setting_resume, media_type=audiobook, artist_name=beatles]</div>
+          <div class="text-box"><strong>Prediction:</strong> 意图: play_audiobook, 实体: [player_setting_resume, media_type=audiobook, artist_name=sauni]</div>
+        </div>
+      </div>
+    </div>
+
+    <!-- 样本2 -->
+    <div class="sample-box scenario2_3">
+      <div class="columns is-vcentered">
+        <!-- 左列：源语音、插入后语音、增强后语音 -->
+        <div class="column is-one-third">
+          <div class="audio-block">
+            <span class="audio-label">源语音</span>
+            <audio controls>
+              <source src="./static/audio/src_clean/audio--1490264244.wav" type="audio/wav">
+            </audio>
+          </div>
+          <div class="audio-block">
+            <span class="audio-label">插入后语音</span>
+            <audio controls>
+              <source src="./static/audio/wuguan_env/audio--1490264244_wuguanyuyin02-TTS1490264244_n7.wav" type="audio/wav">
+            </audio>
+          </div>
+          <div class="audio-block">
+            <span class="audio-label">增强后语音</span>
+            <audio controls>
+              <source src="./static/audio/wuguan_env_enhanced/audio--1490264244_wuguanyuyin02-TTS1490264244_n7_enh.wav" type="audio/wav">
+            </audio>
+          </div>
+        </div>
+        <!-- 右列：oracle、ASR、意图GT、意图结果 -->
+        <div class="column">
+<div class="text-box"><strong>Oracle:</strong> remind me tonight to pick up my dry cleaning at eight pm</div>
+          <div class="text-box"><strong>ASR:</strong> remind me tonight to pick up a do you need some water a cleaning at eight pm</div>
+          <div class="text-box"><strong>Ground Truth:</strong> 意图: calendar_set, 实体: [event_name=pick up my dry cleaning, time=eight pm]</div>
+          <div class="text-box"><strong>Prediction:</strong> 意图: calendar_set, 实体: [event_name=pick up cleaner, time=eight pm]</div>
+        </div>
+      </div>
+    </div>
+
+    <!-- 样本3 -->
+    <div class="sample-box scenario2_3">
+      <div class="columns is-vcentered">
+        <!-- 左列：源语音、插入后语音、增强后语音 -->
+        <div class="column is-one-third">
+          <div class="audio-block">
+            <span class="audio-label">源语音</span>
+            <audio controls>
+              <source src="./static/audio/src_clean/audio--1501778636.wav" type="audio/wav">
+            </audio>
+          </div>
+          <div class="audio-block">
+            <span class="audio-label">插入后语音</span>
+            <audio controls>
+              <source src="./static/audio/wuguan_env/audio--1501778636_wuguanyuyin02-TTS1501778636_n0.wav" type="audio/wav">
+            </audio>
+          </div>
+          <div class="audio-block">
+            <span class="audio-label">增强后语音</span>
+            <audio controls>
+              <source src="./static/audio/wuguan_env_enhanced/audio--1501778636_wuguanyuyin02-TTS1501778636_n0_enh.wav" type="audio/wav">
+            </audio>
+          </div>
+        </div>
+        <!-- 右列：oracle、ASR、意图GT、意图结果 -->
+        <div class="column">
+          <div class="text-box"><strong>Oracle:</strong> whats the currency exchange rate for china</div>
+          <div class="text-box"><strong>ASR:</strong> whats the currency exchange rate for china</div>
+          <div class="text-box"><strong>Ground Truth:</strong> 意图: qa_currency, 实体: [place_name=china]</div>
           <div class="text-box"><strong>Prediction:</strong> 意图: general_quirky, 实体: []</div>
         </div>
       </div>
