--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     }
     .text-box {
       border: 1px solid #ffffff;
-      background-color: #f8f9f9;
+      background-color: #f7f7f7;
       padding: 0.5rem;
       margin-bottom: 0.5rem;
       width: 100%;
@@ -53,7 +53,7 @@
       width: 100%;
     }
     .scenario1 .text-box {
-      background-color: #efe5f5;
+      background-color: #f7f7f7;
       width: 100%;
       padding: 0.3rem 0.5rem;
       font-size: 0.9rem;
@@ -76,7 +76,7 @@
       width: 100%;
     }
     .scenario2_3 .text-box {
-      background-color: #e6ceda;   /* 文本框背景色 */
+      background-color: #f7f7f7;   /* 文本框背景色 */
       width: 100%;
       padding: 0.3rem 0.5rem;      /* 控制文字与边框的内边距 */
       font-size: 0.9rem;
@@ -96,6 +96,7 @@
 <section class="section">
   <div class="container">
     <h1 class="title">Sample 展示区</h1>
+    <br>
 
     <!-- 情景0 ------------------------------------------------------------------------------------------>
     <h2 class="subtitle">同一说话人无关语音</h2>
