--- a/index.html
+++ b/index.html
@@ -94,8 +94,17 @@
 <body>
 
 <section class="section">
+  <div class="container is-max-desktop">
+    <h2 class="title is-3">复杂噪声场景构建</h2>
+    <div class="image has-text-centered">
+      <img src="./static/icon/wuguan.png" alt="Example Image" style="max-width: 90%; height: auto;">
+    </div>
+  </div>
+</section>
+
+<section class="section">
   <div class="container">
-    <h1 class="title">Sample 展示区</h1>
+    <h1 class="title">复杂噪声场景下表现</h1>
 
     <!-- 情景0 ------------------------------------------------------------------------------------------>
     <h2 class="subtitle">示例：同一说话人无关语音</h2>
