--- a/index.html
+++ b/index.html
@@ -94,13 +94,14 @@
 <body>
 
 <section class="section">
-  <div class="container is-max-desktop">
+  <div class="container">
     <h2 class="title is-3">复杂噪声场景构建</h2>
-    <div class="image has-text-centered">
-      <img src="./static/icon/wuguan.png" alt="Example Image" style="max-width: 90%; height: auto;">
+    <div class="image">
+      <img src="./static/icon/wuguan.png" alt="Example Image" style="max-width: 100%; height: auto;">
     </div>
   </div>
 </section>
+
 
 <section class="section">
   <div class="container">
