--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 </section>
 
 
-<section class="section">
+<section class="section mt-0">
   <div class="container">
     <h1 class="title">复杂噪声场景下表现</h1>
 
