--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <h1 class="title">复杂噪声场景下表现</h1>
 
     <!-- 情景0 ------------------------------------------------------------------------------------------>
-    <h2 class="subtitle">示例：同一说话人无关语音</h2>
+    <h2 class="subtitle mt-2">示例：同一说话人无关语音</h2>
     <div class="columns scenario0">
       <div class="column">
         <span class="audio-label">目标语音</span>
