--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 </head>
 <body>
 
-<section class="section">
+<section class="section py-3"> <!-- 上下 padding 改小 -->
   <div class="container">
     <h2 class="title is-3">复杂噪声场景构建</h2>
     <div class="image">
@@ -103,7 +103,8 @@
 </section>
 
 
-<section class="section mt-0">
+<!--  <section class="section mt-0">  -->
+<section class="section py-3"> <!-- 上下 padding 改小 -->
   <div class="container">
     <h1 class="title">复杂噪声场景下表现</h1>
 
