--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
           <div class="text-box"><strong>Oracle:</strong> play a game of contra as a second player</div>
           <div class="text-box"><strong>ASR:</strong> i will do my homework as soon as possible play a game of contra as a second player</div>
           <div class="text-box"><strong>Ground Truth:</strong> 意图: play_game, 实体: [game_name=contra]</div>
-          <div class="text-box"><strong>Prediction:</strong> 意图: general_quirky, 实体: [ ]</div>
+          <div class="text-box"><strong>Prediction:</strong> 意图: general_quirky, 实体: [ ]<span class="red-text">（归到异常类，即拒识）</span></div>
         </div>
       </div>
     </div>
@@ -316,7 +316,7 @@
           <div class="text-box"><strong>Oracle:</strong> whats the currency exchange rate for china</div>
           <div class="text-box"><strong>ASR:</strong> whats the currency exchange rate for china</div>
           <div class="text-box"><strong>Ground Truth:</strong> 意图: qa_currency, 实体: [place_name=china]</div>
-          <div class="text-box"><strong>Prediction:</strong> 意图: general_quirky, 实体: []</div>
+          <div class="text-box"><strong>Prediction:</strong> 意图: general_quirky, 实体: [ ]<span class="red-text">（归到异常类，即拒识）</span></div>
         </div>
       </div>
     </div>
@@ -414,7 +414,7 @@
           <div class="text-box"><strong>Oracle:</strong> whats the currency exchange rate for china</div>
           <div class="text-box"><strong>ASR:</strong> whats the currency exchange rate for china</div>
           <div class="text-box"><strong>Ground Truth:</strong> 意图: qa_currency, 实体: [place_name=china]</div>
-          <div class="text-box"><strong>Prediction:</strong> 意图: general_quirky, 实体: [ ]</div>
+          <div class="text-box"><strong>Prediction:</strong> 意图: general_quirky, 实体: [ ]<span class="red-text">（归到异常类，即拒识）</span></div>
         </div>
       </div>
     </div>
