--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <source src="./static/audio/tts/wuguanyuyin02-TTS1501778636.wav" type="audio/wav">
         </audio>
         <div class="content">
-          <p><strong>ASR:</strong> you should store the food in the fridge</p>
+          <p><strong>ASR:</strong> you should store the fruit in the fridge</p>
         </div>
       </div>
     </div>
