--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <!-- 右列：oracle、ASR、意图GT、意图结果 -->
         <div class="column">
           <div class="text-box"><strong>Oracle:</strong> resume the song from the audiobook by the beatles</div>
-          <div class="text-box"><strong>ASR:</strong> resume the song from the audiobook by the beatles these tomatos are so expensive</div>
+          <div class="text-box"><strong>ASR:</strong> resume the song from the audiobook by the beatles these tomatoes are less expensive</div>
           <div class="text-box"><strong>Ground Truth:</strong> 意图: play_audiobook, 实体: [player_setting=resume, media_type=audiobook, artist_name=beatles]</div>
           <div class="text-box"><strong>Prediction:</strong> 意图: play_audiobook, 实体: [player_setting=resume, media_type=audiobook, artist_name=beatles]</div>
         </div>
@@ -184,7 +184,7 @@
         <!-- 右列：oracle、ASR、意图GT、意图结果 -->
         <div class="column">
           <div class="text-box"><strong>Oracle:</strong> remind me tonight to pick up my dry cleaning at eight pm</div>
-          <div class="text-box"><strong>ASR:</strong> remind me tonight to pick up a do you need some water a cleaning at eight pm</div>
+          <div class="text-box"><strong>ASR:</strong> remind me tonight to pick up do you need some water clean at eight pm</div>
           <div class="text-box"><strong>Ground Truth:</strong> 意图: calendar_set, 实体: [event_name=pick up my dry cleaning, time=eight pm]</div>
           <div class="text-box"><strong>Prediction:</strong> 意图: calendar_set, 实体: [event_name=pick up, timeofday=tonight]</div>
         </div>
@@ -246,7 +246,7 @@
         <!-- 右列：oracle、ASR、意图GT、意图结果 -->
         <div class="column">
           <div class="text-box"><strong>Oracle:</strong> resume the song from the audiobook by the beatles</div>
-          <div class="text-box"><strong>ASR:</strong> resume the song from the audiobook by the beatles</div>
+          <div class="text-box"><strong>ASR:</strong> resume the song from the audiobook sorry wait for me a second someone is calling me bye the beatles</div>
           <div class="text-box"><strong>Ground Truth:</strong> 意图: play_audiobook, 实体: [player_setting_resume, media_type=audiobook, artist_name=beatles]</div>
           <div class="text-box"><strong>Prediction:</strong> 意图: play_audiobook, 实体: [player_setting_resume, media_type=audiobook, artist_name=sauni]</div>
         </div>
@@ -279,8 +279,8 @@
         </div>
         <!-- 右列：oracle、ASR、意图GT、意图结果 -->
         <div class="column">
-<div class="text-box"><strong>Oracle:</strong> remind me tonight to pick up my dry cleaning at eight pm</div>
-          <div class="text-box"><strong>ASR:</strong> remind me tonight to pick up a do you need some water a cleaning at eight pm</div>
+          <div class="text-box"><strong>Oracle:</strong> remind me tonight to pick up my dry cleaning at eight pm</div>
+          <div class="text-box"><strong>ASR:</strong> remind me tonight to pick up a clean at eight pm excuse me may i have some water</div>
           <div class="text-box"><strong>Ground Truth:</strong> 意图: calendar_set, 实体: [event_name=pick up my dry cleaning, time=eight pm]</div>
           <div class="text-box"><strong>Prediction:</strong> 意图: calendar_set, 实体: [event_name=pick up cleaner, time=eight pm]</div>
         </div>
@@ -314,7 +314,7 @@
         <!-- 右列：oracle、ASR、意图GT、意图结果 -->
         <div class="column">
           <div class="text-box"><strong>Oracle:</strong> whats the currency exchange rate for china</div>
-          <div class="text-box"><strong>ASR:</strong> whats the currency exchange rate for china</div>
+          <div class="text-box"><strong>ASR:</strong> you should store the fruit in a fridge what is the currency exchange rate for china</div>
           <div class="text-box"><strong>Ground Truth:</strong> 意图: qa_currency, 实体: [place_name=china]</div>
           <div class="text-box"><strong>Prediction:</strong> 意图: general_quirky, 实体: [ ]<span class="red-text">（归到异常类，即拒识）</span></div>
         </div>
