--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
         </div>
         <div class="column">
           <div class="text-box"><strong>Oracle:</strong> resume the song from the audiobook by the beatles</div>
-          <div class="text-box"><strong>ASR:</strong> resume the song from the audiobook by the beatles</div>
+          <div class="text-box"><strong>ASR:</strong> that was just one night sorry wait for me a second someone is calling me dont do but buy the beatles</div>
           <div class="text-box"><strong>Ground Truth:</strong> 意图: play_audiobook, 实体: [player_setting_resume, media_type=audiobook, artist_name=beatles]</div>
           <div class="text-box"><strong>Prediction:</strong> 意图: play_audiobook, 实体: [player_setting_resume, media_type=audiobook]</div>
         </div>
@@ -380,7 +380,7 @@
         </div>
         <div class="column">
           <div class="text-box"><strong>Oracle:</strong> play a game of contra as a second player</div>
-          <div class="text-box"><strong>ASR:</strong> play a game of contra as a second player</div>
+          <div class="text-box"><strong>ASR:</strong> play a game of contra as a step i will do my homework as soon as possible it was muchier</div>
           <div class="text-box"><strong>Ground Truth:</strong> 意图: play_game, 实体: [game_name=contra]</div>
           <div class="text-box"><strong>Prediction:</strong> 意图: play_game, 实体: [game_name=country a]</div>
         </div>
@@ -412,7 +412,7 @@
         </div>
         <div class="column">
           <div class="text-box"><strong>Oracle:</strong> whats the currency exchange rate for china</div>
-          <div class="text-box"><strong>ASR:</strong> whats the currency exchange rate for china</div>
+          <div class="text-box"><strong>ASR:</strong> vad är det för en det är en kärlek det är en kärlek det är en kärlek kärlek det är en kärlek</div>
           <div class="text-box"><strong>Ground Truth:</strong> 意图: qa_currency, 实体: [place_name=china]</div>
           <div class="text-box"><strong>Prediction:</strong> 意图: general_quirky, 实体: [ ]<span class="red-text">（归到异常类，即拒识）</span></div>
         </div>
