--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
         </div>
         <div class="column">
           <div class="text-box"><strong>Oracle:</strong> whats the currency exchange rate for china</div>
-          <div class="text-box"><strong>ASR:</strong> vad är det för en det är en kärlek det är en kärlek det är en kärlek kärlek det är en kärlek</div>
+          <div class="text-box"><strong>ASR:</strong> what is it for actually china</div>
           <div class="text-box"><strong>Ground Truth:</strong> 意图: qa_currency, 实体: [place_name=china]</div>
           <div class="text-box"><strong>Prediction:</strong> 意图: general_quirky, 实体: [ ]<span class="red-text">（归到异常类，即拒识）</span></div>
         </div>
