--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
         </div>
         <div class="column">
           <div class="text-box"><strong>Oracle:</strong> resume the song from the audiobook by the beatles</div>
-          <div class="text-box"><strong>ASR:</strong> these tomatos are so expensive resume the song from the audiobook by the beatles</div>
+          <div class="text-box"><strong>ASR:</strong> these tomatoes are less expensive resume the song from the audiobook by the beatles</div>
           <div class="text-box"><strong>Ground Truth:</strong> 意图: play_audiobook, 实体: [player_setting_resume, media_type=audiobook, artist_name=beatles]</div>
           <div class="text-box"><strong>Prediction:</strong> 意图: cooking_recipe, 实体: [=food_type=tomato soup]</div>
         </div>
@@ -479,7 +479,7 @@
         </div>
         <div class="column">
           <div class="text-box"><strong>Oracle:</strong> whats the currency exchange rate for china</div>
-          <div class="text-box"><strong>ASR:</strong> what is you should store the food in the fridge the currency exchange rate for china</div>
+          <div class="text-box"><strong>ASR:</strong> what if you should store the fruit in the fridge trust me its so good china</div>
           <div class="text-box"><strong>Ground Truth:</strong> 意图: qa_currency, 实体: [place_name=china]</div>
           <div class="text-box"><strong>Prediction:</strong> 意图: cooking_recipe, 实体: [ ]</div>
         </div>
