--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <link rel="icon" href="./static/icon/uestc.png">
   <style>
     /* ----------------- 公共样式 ----------------- */
+    .container {
+      padding-left: 5%;   /* 默认是 1.5rem，可以调大 */
+      padding-right: 5rem;
+    }
     .sample-box {
       border: 2px solid rgba(88, 89, 91, 0.338);
       padding: 1rem;
