--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <style>
     /* ----------------- 公共样式 ----------------- */
     .container {
-      padding-left: 5%;   /* 默认是 1.5rem，可以调大 */
-      padding-right: 5rem;
+      padding-left: 3rem;   /* 默认是 1.5rem，可以调大 */
+      padding-right: 3rem;
     }
     .sample-box {
       border: 2px solid rgba(88, 89, 91, 0.338);
