--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
   <style>
     /* ----------------- 公共样式 ----------------- */
     .container {
-      padding-left: 3rem;   /* 默认是 1.5rem，可以调大 */
-      padding-right: 3rem;
+      padding-left: 2rem;   /* 默认是 1.5rem，可以调大 */
+      padding-right: 2rem;
     }
     .sample-box {
       border: 2px solid rgba(88, 89, 91, 0.338);
       padding: 1rem;
       margin-bottom: 1rem;
+      border-radius: 12px;   /* 圆角长方形 */
     }
     .audio-label {
       font-weight: bold;
@@ -30,6 +31,7 @@
       margin-bottom: 0.5rem;
       width: 100%;
       box-sizing: border-box;
+      border-radius: 12px;   /* 圆角长方形 */
     }
     /*-------展示区和情景0之间间距---------*/
     .subtitle:first-of-type {
@@ -65,6 +67,7 @@
       margin-top: 0.1rem;          /* 控制语音播放器与文本框的上下间距 */
       height: 60px;       /* 固定高度 */
       margin-bottom: 0.5rem; /* 单独调间距 */
+      border-radius: 12px;   /* 圆角长方形 */
     }
 
     /* ----------------- 情景2 和 3 ----------------- */
@@ -91,9 +94,11 @@
       margin-top: 0.1rem;          /* 控制语音播放器与文本框的上下间距 */
       height: 60px;       /* 固定高度 */
       margin-bottom: 0.5rem; /* 单独调间距 */
+      border-radius: 12px;   /* 圆角长方形 */
     }
 
-  </style>
+</style>
+
 </head>
 <body>
 
