--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
     /* ----------------- 情景0 ----------------- */
     .scenario0 .column {
       display: block;
+      border: 2px solid rgba(88, 89, 91, 0.338); /* 加边框 */
+      border-radius: 10px;                        /* 圆角 */
+      padding: 0.5rem;                            /* 内边距，保证内容不贴边 */
+      margin-bottom: 0.5rem;                      /* 列之间间距 */
     }
     .scenario0 audio {
       width: 85%;
@@ -48,7 +52,6 @@
     .scenario0 .content {
       margin-top: 0.5rem;
     }
-
     /* ----------------- 情景1 ----------------- */
     .scenario1 .column.is-one-third {
       display: flex;
