--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
           <div class="text-box"><strong>Oracle:</strong> resume the song from the audiobook by the beatles</div>
           <div class="text-box"><strong>ASR:</strong> these tomatoes are less expensive resume the song from the audiobook by the beatles</div>
           <div class="text-box"><strong>Ground Truth:</strong> 意图: play_audiobook, 实体: [player_setting_resume, media_type=audiobook, artist_name=beatles]</div>
-          <div class="text-box"><strong>Prediction:</strong> 意图: cooking_recipe, 实体: [=food_type=tomato soup]</div>
+          <div class="text-box"><strong>Prediction:</strong> 意图: cooking_recipe, 实体: [food_type=tomato soup]</div>
         </div>
       </div>
     </div>
