--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
           <div class="text-box"><strong>Oracle:</strong> play a game of contra as a second player</div>
           <div class="text-box"><strong>ASR:</strong> play a game or call me i will do my homework as soon as possible i will do my homework as soon as possible</div>
           <div class="text-box"><strong>Ground Truth:</strong> 意图: play_game, 实体: [game_name=contra]</div>
-          <div class="text-box"><strong>Prediction:</strong> 意图: play_game, 实体: [game_namecricket]</div>
+          <div class="text-box"><strong>Prediction:</strong> 意图: play_game, 实体: [game_name=cricket]</div>
         </div>
       </div>
     </div>
